[package]
name = "saikoro"
version = "1.1.1"
authors = ["Morgan Bauer"]
homepage = "https://jolkert.dev/saikoro"
edition = "2021"
description = "Parser and evaluator for doing math with dice notation expressions"
repository = "https://github.com/Jolkert/saikoro"
license = "MIT OR Apache-2.0"
keywords = ["dice", "parser", "math"]
categories = ["mathematics", "parser-implementations"]
exclude = ["bacon.toml", ".vscode/", "CHANGELOG.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy-regex = "3.1.0"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.9.4"
thiserror = "1.0.51"
